Se refactoriza el ws
